# obmc-console

./: Makefile  Makefile.am  README.md  bootstrap.sh  config.c  configure.ac  console-client.c  console-server.c  console-server.h  console-socket.c  log-handler.c  obmc-console.conf.sample  openbmc-console.conf.sample  ringbuffer.c  socket-handler.c  stdio-handler.c  tty-handler.c  util.c
test/: Makefile.am
