# Copyright © 2016 IBM Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# initialisation
AC_INIT([obmc-console], 0.1, [Jeremy Kerr <jk@ozlabs.org>])
AM_INIT_AUTOMAKE
AM_SILENT_RULES([yes])

# required tools
AC_PROG_CC

# output
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
